--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "axios": "^1.8.2",
+    "class-transformer": "^0.5.1",
     "mongoose": "^8.12.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
